[package]
name = "veccentric"
authors = ["micouy <m.powierza@tutanota.com>"]
description = "A small 2D vector library inspired by p5.Vector."
readme = "README.md"
repository = "https://github.com/micouy/veccentric"
license = "MIT"
categories = ["game-development", "simulation", "mathematics"]
keywords = ["vector", "2D", "gamedev"]

version = "0.1.2"
edition = "2018"
include = [
    "Cargo.toml",
    "**/*.rs",
    ".gitignore",
    "README.md",
]

[dependencies]
overload = "0.1"
rand = { version = "0.8", features = ["small_rng"], optional = true }

[dev-dependencies]
float-cmp = "0.9"

[features]
default = []
random = ["rand"]

[package.metadata.docs.rs]
all-features = true
