[package]
name = "veccentric"
authors = ["micouy <m.powierza@tutanota.com>"]
description = "Tiny 2D vector library."
readme = "README.md"
repository = "https://github.com/micouy/veccentric"
license = "MIT"
categories = ["game-development", "simulation", "mathematics"]
keywords = ["vector", "2D", "gamedev"]

version = "0.2.0"
edition = "2018"
include = [
    "Cargo.toml",
    "**/*.rs",
    "**/*.md",
    "!scratchpad.md",
    "assets/",
    ".gitignore",
]

[dependencies]
overload = "0.1"
rand = { version = "0.8", features = ["small_rng"], optional = true }

[dev-dependencies]
float-cmp = "0.9"
pixels = "*"
winit = "*"
winit_input_helper = "*"

[features]
default = []
all = ["random"]
random = ["rand"]

[package.metadata.docs.rs]
all-features = true
