[package]
name = "veccentric"
authors = ["micouy <m.powierza@tutanota.com>"]
description = "Tiny 2D vector library."
readme = "README.md"
repository = "https://github.com/micouy/veccentric"
license = "MIT"
categories = ["game-development", "simulation", "mathematics"]
keywords = ["vector", "2D", "gamedev"]

version = "0.3.0"
edition = "2018"
include = [
    "Cargo.toml",
    "**/*.rs",
    "**/*.md",
    "!scratchpad.md",
    "assets/",
    ".gitignore",
]

[[example]]
name = "engine"
crate-type = ["lib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"], optional = true }

[dev-dependencies]
float-cmp = "0.9"
pixels = "0.5"
winit = "0.25"
winit_input_helper = "0.10"

[features]
default = []
all = ["random"]
random = ["rand"]

[package.metadata.docs.rs]
all-features = true
